increase size of sticky-notes(s) to prevent text overflow

--- a/edv_cdv/style.css
+++ b/edv_cdv/style.css
@@ -108,8 +108,8 @@ body {
 .sticky-note1 {
   display: inline-block;
   word-wrap: break-word;
-  width: 250px;
-  height: 200px;
+  width: 325px;
+  height: 300px;
   background-color: #FFFF00; 
   border-radius: 10px;
   padding: 20px;
@@ -125,8 +125,8 @@ body {
 .sticky-note2 {
   display: inline-block;
   word-wrap: break-word;
-  width: 250px;
-  height: 200px;
+  width: 325px;
+  height: 300px;
   background-color: #00e1ff; 
   border-radius: 10px;
   padding: 20px;
@@ -142,8 +142,8 @@ body {
 .sticky-note3 {
   display: inline-block;
   word-wrap: break-word;
-  width: 250px;
-  height: 200px;
+  width: 325px;
+  height: 300px;
   background-color: #b835f5; 
   border-radius: 10px;
   padding: 20px;
